--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
 </head>
 <body>
-    <script src="ES6/13.challenges.js"></script>
+    <script src="async/1.example.js"></script>
 </body>
 </html>
