Add readme file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
 </head>
 <body>
-    <script src="async/1.example.js"></script>
+    <!-- insert any javascript file in below src="" section to see the output of that javascript file -->
+    <script src="async/6.ajax-async-await.js"></script>
 </body>
 </html>
